--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       height: 100%;
       width: 0;
       background-color: #00ff00;
-      animation: fill 3s linear forwards; /* 3s fill */
+      animation: fill 1.5s linear forwards; /* Reduced to 1.5s */
     }
     #loading-text {
       font-size: 24px;
@@ -129,6 +129,7 @@
 
   <!-- AUDIO (loop) -->
   <audio id="title-audio" src="title_audio.mp3" loop></audio>
+  <audio id="level1-audio" src="level1_audio.mp3" loop></audio>
   <audio id="level2-audio" src="level2_audio.mp3" loop></audio>
   <audio id="level3-audio" src="level3_audio.mp3" loop></audio>
   <audio id="boss-audio" src="boss_audio.mp3" loop></audio>
@@ -258,6 +259,7 @@
     # 4) AUDIO ELEMENTS
     # -------------------------------------------------
     title_audio = document["title-audio"]
+    level1_audio = document["level1-audio"]
     level2_audio = document["level2-audio"]
     level3_audio = document["level3-audio"]
     boss_audio = document["boss-audio"]
@@ -284,6 +286,8 @@
         """Pause and reset all music tracks to time=0."""
         title_audio.pause()
         title_audio.currentTime = 0
+        level1_audio.pause()
+        level1_audio.currentTime = 0
         level2_audio.pause()
         level2_audio.currentTime = 0
         level3_audio.pause()
@@ -294,14 +298,14 @@
     def set_music_for_level(current_level):
         """
         Stop all audio, then:
-          - Level 1 => title_audio
+          - Level 1 => level1_audio
           - Level 2 => level2_audio
           - Level 3 => level3_audio
           - Level > 3 => boss_audio
         """
         stop_all_music()
         if current_level == 1:
-            title_audio.play()
+            level1_audio.play()
         elif current_level == 2:
             level2_audio.play()
         elif current_level == 3:
@@ -532,6 +536,8 @@
 
     def draw_level_title():
         """Displays the level title screen and schedules game initialization."""
+        global level
+
         ctx.clearRect(0, 0, WIDTH, HEIGHT)
         move_stars()
         draw_stars()
@@ -543,6 +549,9 @@
             ctx.fillText("Final Boss!", WIDTH // 2, HEIGHT // 2)
         else:
             ctx.fillText(f"Level {level}", WIDTH // 2, HEIGHT // 2)
+
+        # Play level-specific audio
+        set_music_for_level(level)
 
         # Log the transition
         window.console.log(f"Displaying Level {level} title screen.")
@@ -707,6 +716,7 @@
 
         current_time = window.Date.new().getTime()
 
+        # Handle SPACE key on loading screen
         if not audio_unlocked and press_space_loading.style.display == "block":
             if event.keyCode == 32:  # SPACE
                 # Hide loading overlay and show canvas
@@ -747,22 +757,7 @@
         flash_text = not flash_text
 
     # -------------------------------------------------
-    # 12) INITIALIZE HIGH SCORE
-    # -------------------------------------------------
-    def initialize_high_score():
-        global top_scores
-        timestamp = window.Date.new().getTime()
-        url = f'https://raw.githubusercontent.com/Jamie-Wilson-UL/No-Matter/main/high_score.json?nocache={timestamp}'
-        window.fetch(url).then(
-            lambda response: response.json()
-        ).then(
-            lambda data: update_high_scores(data)
-        ).catch(
-            lambda error: window.console.error(f"Error fetching high scores: {error}")
-        )
-
-    # -------------------------------------------------
-    # 13) MAIN UPDATE LOOP (movement, collisions)
+    # 12) MAIN UPDATE LOOP (movement, collisions)
     # -------------------------------------------------
     def update():
         global game_over, score, game_started, showing_level_title
@@ -800,7 +795,7 @@
             for enemy in enemies[:]:
                 for bullet in bullets[:]:
                     if (enemy["pos"][0] <= bullet[0] <= enemy["pos"][0] + ENEMY_SIZE and
-                        enemy["pos"][1] <= bullet[1] <= enemy["pos"][1] + ENEMY_SIZE):
+                        enemy["pos"][1] <= bullet["y"] <= enemy["pos"][1] + ENEMY_SIZE):
                         enemies.remove(enemy)
                         bullets.remove(bullet)
                         score += 1
@@ -810,7 +805,7 @@
             # Collisions with boss
             for bullet in bullets[:]:
                 if (boss_pos[0] <= bullet[0] <= boss_pos[0] + BOSS_SIZE and
-                    boss_pos[1] <= bullet[1] <= boss_pos[1] + BOSS_SIZE):
+                    boss_pos[1] <= bullet["y"] <= boss_pos[1] + BOSS_SIZE):
                     bullets.remove(bullet)
                     boss_hits += 1
                     explosion_audio.play()
@@ -818,7 +813,7 @@
         # Collisions with player
         for bullet in enemy_bullets[:]:
             if (player_pos[0] <= bullet[0] <= player_pos[0] + PLAYER_SIZE and
-                player_pos[1] <= bullet[1] <= player_pos[1] + PLAYER_SIZE):
+                player_pos[1] <= bullet["y"] <= player_pos[1] + PLAYER_SIZE):
                 game_over = True
 
         for laser in laser_beams[:]:
@@ -862,7 +857,7 @@
         draw()
 
     # -------------------------------------------------
-    # 14) ENEMY SHOOTING
+    # 13) ENEMY SHOOTING
     # -------------------------------------------------
     def enemy_shoot():
         global game_over, game_started, showing_level_title
@@ -908,7 +903,7 @@
                 boss_last_diagonal_shot = current_time
 
     # -------------------------------------------------
-    # 15) LEVEL UP
+    # 14) LEVEL UP
     # -------------------------------------------------
     def level_up():
         global level, showing_level_title, score
@@ -922,7 +917,7 @@
         draw_level_title()
 
     # -------------------------------------------------
-    # 16) START GAME
+    # 15) START GAME
     # -------------------------------------------------
     def start_game():
         """Triggered when the player presses Space to start the game."""
@@ -933,7 +928,7 @@
         draw_level_title()  # Display the Level 1 title
 
     # -------------------------------------------------
-    # 17) DRAW FINAL SCORE
+    # 16) DRAW FINAL SCORE
     # -------------------------------------------------
     def show_final_score():
         global high_score_updated, showing_high_score_prompt, showing_final_score
@@ -947,7 +942,7 @@
         draw_final_score()
 
     # -------------------------------------------------
-    # 18) ANIMATION FUNCTIONS
+    # 17) ANIMATION FUNCTIONS
     # -------------------------------------------------
     def animate_title_screen(frame):
         if not game_started:
@@ -955,7 +950,7 @@
             window.requestAnimationFrame(animate_title_screen)
 
     # -------------------------------------------------
-    # 19) LOADING SCREEN
+    # 18) LOADING SCREEN
     # -------------------------------------------------
     def show_loading_screen():
         """Displays the loading screen and starts the loading process."""
@@ -964,10 +959,10 @@
 
         def reveal_press_space():
             press_space_loading.style.display = "block"  # show text after loading bar
-        window.setTimeout(reveal_press_space, 3000)  # Loading time remains 3 seconds
+        window.setTimeout(reveal_press_space, 1500)  # Reduced to 1.5 seconds
 
     # -------------------------------------------------
-    # 20) INITIALIZATION
+    # 19) INITIALIZATION
     # -------------------------------------------------
     def hide_loading_screen():
         """Hides the loading screen."""
