--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
       border: none;
       cursor: pointer;
     }
+    /* Cover Images (Hidden by Default) */
+    .level-cover {
+      display: none;
+    }
   </style>
 </head>
 <body onload="brython()">
@@ -140,6 +144,12 @@
 
   <!-- TITLE IMAGE -->
   <img id="title-img" src="title.gif" style="display:none"/>
+
+  <!-- LEVEL COVER IMAGES -->
+  <img id="level1-cover" src="level1_cover.jpg" class="level-cover"/>
+  <img id="level2-cover" src="level2_cover.jpg" class="level-cover"/>
+  <img id="level3-cover" src="level3_cover.jpg" class="level-cover"/>
+  <!-- You can add a placeholder for the boss cover later if needed -->
 
   <!-- HIGH SCORE MODAL -->
   <div id="high-score-modal">
@@ -212,6 +222,11 @@
     spaceship_img = html.IMG(src="car.png")
     title_img = document["title-img"]
     boss_img = html.IMG(src="boss.png")
+
+    # Cover Images
+    level1_cover = document["level1-cover"]
+    level2_cover = document["level2-cover"]
+    level3_cover = document["level3-cover"]
 
     level_image_paths = {
         1: [
@@ -468,12 +483,7 @@
         game_started = True
         level_start_time = window.Date.new().getTime()
 
-        # Set music for the new level
-        if level <= MAX_LEVELS:
-            set_music_for_level(level)
-        else:
-            # Boss music
-            set_music_for_level(MAX_LEVELS + 1)
+        # Removed set_music_for_level from here to prevent restarting audio
 
         # Log the game initialization
         window.console.log(f"Initialized Level {level}. Starting gameplay.")
@@ -545,10 +555,32 @@
         ctx.font = "bold 48px 'Press Start 2P'"
         ctx.textAlign = "center"
 
+        # Display Level Title
         if level > MAX_LEVELS:
-            ctx.fillText("Final Boss!", WIDTH // 2, HEIGHT // 2)
+            ctx.fillText("Final Boss!", WIDTH // 2, HEIGHT // 4)
         else:
-            ctx.fillText(f"Level {level}", WIDTH // 2, HEIGHT // 2)
+            ctx.fillText(f"Level {level}", WIDTH // 2, HEIGHT // 4)
+
+        # Display Cover Art
+        if level == 1:
+            cover_img = level1_cover
+        elif level == 2:
+            cover_img = level2_cover
+        elif level == 3:
+            cover_img = level3_cover
+        else:
+            cover_img = None  # No cover for boss level yet
+
+        if cover_img:
+            # Calculate dimensions to fit the canvas
+            cover_width, cover_height = get_scaled_dims(cover_img, 400)
+            ctx.drawImage(
+                cover_img,
+                (WIDTH - cover_width) // 2,
+                HEIGHT // 3,
+                cover_width,
+                cover_height
+            )
 
         # Play level-specific audio
         set_music_for_level(level)
@@ -556,8 +588,8 @@
         # Log the transition
         window.console.log(f"Displaying Level {level} title screen.")
 
-        # Schedule game initialization after 1 second
-        window.setTimeout(initialize_game, 1000)
+        # Schedule game initialization after 3 seconds
+        window.setTimeout(initialize_game, 3000)
 
     def draw_final_score():
         ctx.clearRect(0, 0, WIDTH, HEIGHT)
@@ -819,14 +851,14 @@
                 game_over = True
 
         for laser in laser_beams[:]:
-            # Corrected bullet access: bullet["x"] -> laser["x"], bullet["y"] -> laser["y"]
+            # Corrected bullet access: laser["x"], laser["y"] are correct
             if (player_pos[0] <= laser["x"] + LASER_WIDTH and
                 laser["x"] <= player_pos[0] + PLAYER_SIZE and
                 player_pos[1] <= laser["y"]):
                 game_over = True
 
         for shot in diagonal_shots[:]:
-            # Corrected bullet access: bullet["x"] -> shot["x"], bullet["y"] -> shot["y"]
+            # Corrected bullet access: shot["x"], shot["y"] are correct
             if (player_pos[0] <= shot["x"] <= player_pos[0] + PLAYER_SIZE and
                 player_pos[1] <= shot["y"] <= player_pos[1] + PLAYER_SIZE):
                 game_over = True
