--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div id="loading-bar">
       <div id="loading-progress"></div>
     </div>
-    <!-- Press SPACE after bar is done -->
+    <!-- Press SPACE after bar finishes -->
     <p id="press-space-loading">Press SPACE to Continue</p>
   </div>
 
@@ -149,8 +149,8 @@
   <img id="level1-cover" src="level1_cover.jpg" class="level-cover"/>
   <img id="level2-cover" src="level2_cover.jpg" class="level-cover"/>
   <img id="level3-cover" src="level3_cover.jpg" class="level-cover"/>
-  <!-- Placeholder for Boss Cover Art (Add when available) -->
-  <!-- <img id="boss-cover" src="boss_cover.jpg" class="level-cover"/> --> <!-- Optional, currently commented out -->
+  <!-- Placeholder for Boss Cover Art (Optional) -->
+  <!-- <img id="boss-cover" src="boss_cover.jpg" class="level-cover"/> -->
 
   <!-- HIGH SCORE MODAL -->
   <div id="high-score-modal">
@@ -168,7 +168,7 @@
     # 1) GAME CONSTANTS
     # ---------------------------------------------------------
     WIDTH, HEIGHT = 800, 600
-    PLAYER_SIZE = 50
+    PLAYER_SIZE = 60  # Increased from 50 to 60
     ENEMY_SIZE = 40
     BOSS_SIZE = 200
 
@@ -182,7 +182,7 @@
     MAX_LEVELS = 3
     BOSS_HITS_REQUIRED = 20
 
-    PLAYER_MAX_DIM = 50  # Adjusted to match PLAYER_SIZE for alignment
+    PLAYER_MAX_DIM = 60  # Increased to match PLAYER_SIZE for alignment
     ENEMY_MAX_DIM = 80
     BOSS_MAX_DIM = 250
 
@@ -228,9 +228,7 @@
     level1_cover = document["level1-cover"]
     level2_cover = document["level2-cover"]
     level3_cover = document["level3-cover"]
-    # boss_cover is optional and currently not used as the image is missing
-    # Uncomment the following line once boss_cover.jpg is available
-    # boss_cover = document["boss-cover"]
+    boss_cover = document["boss-cover"] if "boss-cover" in document else None  # Optional
 
     level_image_paths = {
         1: [
@@ -487,8 +485,6 @@
         game_started = True
         level_start_time = window.Date.new().getTime()
 
-        # Removed set_music_for_level from here to prevent restarting audio
-
         # Log the game initialization
         window.console.log(f"Initialized Level {level}. Starting gameplay.")
 
@@ -572,18 +568,18 @@
             cover_img = level2_cover
         elif level == 3:
             cover_img = level3_cover
-        elif level > MAX_LEVELS and 'boss-cover' in document:
-            cover_img = document["boss-cover"]
+        elif level > MAX_LEVELS and boss_cover:
+            cover_img = boss_cover
         else:
             cover_img = None  # No cover for boss level yet
 
-        if cover_img and cover_img.naturalWidth > 0:
+        if cover_img:
             # Calculate dimensions to fit the canvas
             cover_width, cover_height = get_scaled_dims(cover_img, 400)
             ctx.drawImage(
                 cover_img,
                 (WIDTH - cover_width) // 2,
-                HEIGHT // 3,
+                HEIGHT // 3 - 50,  # Moved up by 50 pixels for better centering
                 cover_width,
                 cover_height
             )
@@ -834,7 +830,7 @@
         if level <= MAX_LEVELS:
             for enemy in enemies[:]:
                 for bullet in bullets[:]:
-                    # Collision detection using list indices
+                    # Corrected bullet access: bullet["y"] -> bullet[1]
                     if (enemy["pos"][0] <= bullet[0] <= enemy["pos"][0] + ENEMY_SIZE and
                         enemy["pos"][1] <= bullet[1] <= enemy["pos"][1] + ENEMY_SIZE):
                         enemies.remove(enemy)
@@ -853,20 +849,20 @@
 
         # Collisions with player
         for bullet in enemy_bullets[:]:
-            # Collision detection using list indices
+            # Corrected bullet access: bullet["y"] -> bullet[1], bullet["x"] -> bullet[0]
             if (player_pos[0] <= bullet[0] <= player_pos[0] + PLAYER_SIZE and
                 player_pos[1] <= bullet[1] <= player_pos[1] + PLAYER_SIZE):
                 game_over = True
 
         for laser in laser_beams[:]:
-            # Collision detection for lasers
+            # Corrected bullet access: laser["x"], laser["y"] are correct
             if (player_pos[0] <= laser["x"] + LASER_WIDTH and
                 laser["x"] <= player_pos[0] + PLAYER_SIZE and
                 player_pos[1] <= laser["y"]):
                 game_over = True
 
         for shot in diagonal_shots[:]:
-            # Collision detection for diagonal shots
+            # Corrected bullet access: shot["x"], shot["y"] are correct
             if (player_pos[0] <= shot["x"] <= player_pos[0] + PLAYER_SIZE and
                 player_pos[1] <= shot["y"] <= player_pos[1] + PLAYER_SIZE):
                 game_over = True
@@ -1021,4 +1017,3 @@
   </script>
 </body>
 </html>
-
